[gd_scene load_steps=14 format=2]

[ext_resource path="res://shared/items/Interactable.gd" type="Script" id=1]
[ext_resource path="res://src/lab/weapon_chest.png" type="Texture" id=2]
[ext_resource path="res://src/lab/WeaponItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Air.png" type="Texture" id=4]
[ext_resource path="res://assets/Grenade.png" type="Texture" id=5]
[ext_resource path="res://assets/Plunger.png" type="Texture" id=6]
[ext_resource path="res://src/lab/WeaponChest.gd" type="Script" id=7]
[ext_resource path="res://theme/theme.tres" type="Theme" id=8]
[ext_resource path="res://src/guns/GrenadeGun.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/guns/Pistol.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/guns/PlungerGun.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/guns/AirGun.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 12 )

[node name="WeaponChest" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="WeaponChest" type="Area2D" parent="Sprite"]
position = Vector2( 5, 0 )
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/WeaponChest"]
position = Vector2( -5, 0 )
shape = SubResource( 1 )

[node name="Control" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -67.0
margin_right = 57.0
margin_bottom = -17.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 8 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
margin_right = 87.0
margin_bottom = 50.0
grow_vertical = 0
rect_min_size = Vector2( 0, 50 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
margin_right = 85.0
margin_bottom = 80.0

[node name="WeaponItem" parent="Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
weapon = ExtResource( 10 )

[node name="WeaponItem2" parent="Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 21.0
margin_bottom = 38.0
text = "Air Gun"
icon = ExtResource( 4 )
weapon = ExtResource( 12 )

[node name="WeaponItem3" parent="Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 42.0
margin_bottom = 59.0
text = "Grenade"
icon = ExtResource( 5 )
weapon = ExtResource( 9 )

[node name="WeaponItem4" parent="Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 63.0
margin_bottom = 80.0
text = "Plunger"
icon = ExtResource( 6 )
weapon = ExtResource( 11 )

[connection signal="interacted" from="Sprite/WeaponChest" to="." method="_on_WeaponChest_interacted"]
[connection signal="unhightlight" from="Sprite/WeaponChest" to="." method="_on_WeaponChest_unhightlight"]
[connection signal="select_weapon" from="Control/ScrollContainer/VBoxContainer/WeaponItem" to="." method="_on_WeaponItem_select_weapon"]
[connection signal="select_weapon" from="Control/ScrollContainer/VBoxContainer/WeaponItem2" to="." method="_on_WeaponItem_select_weapon"]
[connection signal="select_weapon" from="Control/ScrollContainer/VBoxContainer/WeaponItem3" to="." method="_on_WeaponItem_select_weapon"]
[connection signal="select_weapon" from="Control/ScrollContainer/VBoxContainer/WeaponItem4" to="." method="_on_WeaponItem_select_weapon"]
